manifests/argocd/vcluster/k0s/vcluster-vs-f.yaml
###
# vClusters accessing point f
###
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vcluster-f-vs
  namespace: team-f
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingress/vcluster
  tls:
  - match:
    - port: 443
      sniHosts:
      - "vcluster-f"
    route:
    - destination:
        host: vcluster-f
        port:
          number: 443
